--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,7 @@ classifiers = [
 [project.urls]
 Repository = "https://github.com/Benjas333/pyKickAPI"
 Issues = "https://github.com/Benjas333/pyKickAPI/issues"
-Changelog = "https://github.com/Benjas333/pyKickAPI/blob/main/CHANGELOG.md"
+Changelog = "https://github.com/Benjas333/pyKickAPI/blob/master/CHANGELOG.md"
 
 [build-system]
 requires = ["uv_build>=0.8.11,<0.9.0"]
@@ -49,7 +49,7 @@ module-name = "kickAPI"
 
 [tool.pytest.ini_options]
 addopts = "-v --cov=kickAPI --cov-report=term-missing --html=src/tests/reports/report.html --self-contained-html"
-log_cli = true
+# log_cli = true
 # log_cli_level = "DEBUG"
 log_level = "DEBUG"
 testpaths = ["src/tests"]
