--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,18 +42,25 @@ Changelog = "https://github.com/Benjas333/pyKickAPI/blob/master/CHANGELOG.md"
 [build-system]
 # requires = ["uv_build>=0.8.11,<0.9.0"]
 # build-backend = "uv_build"
-requires = ["setuptools>=61"]
-build-backend = "setuptools.build_meta"
+# requires = ["setuptools>=61"]
+# build-backend = "setuptools.build_meta"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 # [tool.uv.build-backend]
 # module-root = "src"
 # module-name = "betterKickAPI"
 
-[tool.setuptools.packages.find]
-where = ['src']
+# [tool.setuptools.packages.find]
+# where = ['src']
 
-[tool.setuptools.package-data]
-betterKickAPI = ['py.typed']
+# [tool.setuptools.package-data]
+# betterKickAPI = ['py.typed']
+
+[tool.hatch.build.targets.sdist]
+include = [
+  "src/betterKickAPI",
+]
 
 [tool.pytest.ini_options]
 addopts = "-v --cov=betterKickAPI --cov-report=term-missing --html=src/tests/reports/report.html --self-contained-html"
