--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,10 +71,13 @@ testpaths = ["src/tests"]
 
 [dependency-groups]
 dev = [
+    "pydata-sphinx-theme>=0.16.1",
     "pylint>=3.3.8",
     "pytest>=8.4.2",
     "pytest-asyncio>=1.2.0",
     "pytest-cov>=7.0.0",
     "pytest-html>=4.1.1",
     "python-dotenv>=1.1.1",
+    "sphinx>=7.4.7",
+    "sphinxcontrib-napoleon>=0.7",
 ]
