--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,12 +9,12 @@ authors = [
 requires-python = ">=3.9"
 license = "MIT"
 dependencies = [
-    "aiofiles>=24.1.0",
-    "cryptography>=45.0.7",
+    "aiofiles>=25.1.0",
+    "aiohttp>=3.13.2",
+    "cryptography>=46.0.3",
     "enum-tools>=0.13.0",
-    "httpx>=0.28.1",
-    "orjson>=3.11.3",
-    "pydantic>=2.11.9",
+    "orjson>=3.11.4",
+    "pydantic>=2.12.3",
     "socketify>=0.0.31",
     "strenum>=0.4.15",
 ]
